<resources>
    <string name="app_name">Popular Movies</string>
    <string name="api_key"></string>
    <string name="error_message">An error has occurred</string>
    <string name="sort">Sort By</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="overview">Overview:</string>
    <string name="user_rating">User rating:</string>
    <string name="release_date">Release date:</string>
    <string name="refresh">refresh</string>
    <string name="favorites">Favorites</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
</resources>
