<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_popular"
                android:title="@string/most_popular"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_sort_top_rated"
                android:title="@string/top_rated"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_favorites"
                android:title="@string/favorites"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>