<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/movie_details_margin_bottom"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/poster_iv"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/movie_details_label_margin_bottom"
                        android:layout_marginLeft="@dimen/movie_details_left_margin"
                        android:text="@string/user_rating"
                        android:textSize="@dimen/movie_details_label_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/user_rating_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/movie_details_margin_bottom"
                        android:layout_marginLeft="@dimen/movie_details_left_margin"
                        android:layout_marginRight="@dimen/movie_details_right_margin"
                        tools:text="9.7" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/movie_details_label_margin_bottom"
                        android:layout_marginLeft="@dimen/movie_details_left_margin"
                        android:text="@string/release_date"
                        android:textSize="@dimen/movie_details_label_text_size"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/release_date_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/movie_details_margin_bottom"
                        android:layout_marginLeft="@dimen/movie_details_left_margin"
                        android:layout_marginRight="@dimen/movie_details_right_margin"
                        tools:text="2016-10-12" />

                    <Button
                        android:id="@+id/fav_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawablePadding="15dp"
                        android:layout_marginLeft="@dimen/movie_details_left_margin"
                        android:layout_marginRight="@dimen/movie_details_right_margin"
                        android:paddingTop="16dp"
                        android:textColor="#FFFFFF" />
                </LinearLayout>



            </LinearLayout>

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/movie_details_margin_bottom"
                android:layout_marginLeft="@dimen/movie_details_left_margin"
                android:textSize="@dimen/movie_details_title_text_size"
                android:textStyle="bold"
                tools:text="Title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/movie_details_label_margin_bottom"
                android:layout_marginLeft="@dimen/movie_details_left_margin"
                android:text="@string/overview"
                android:textSize="@dimen/movie_details_label_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/movie_details_margin_bottom"
                android:layout_marginLeft="@dimen/movie_details_left_margin"
                android:layout_marginRight="@dimen/movie_details_right_margin"
                tools:text="some overview text" />


            <TextView
                android:id="@+id/reviews_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/movie_details_label_margin_bottom"
                android:layout_marginLeft="@dimen/movie_details_left_margin"
                android:text="@string/reviews"
                android:textSize="@dimen/movie_details_label_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/trailers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/movie_details_label_margin_bottom"
                android:layout_marginLeft="@dimen/movie_details_left_margin"
                android:text="@string/trailers"
                android:textSize="@dimen/movie_details_label_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailers_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_error_message_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="20sp"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</RelativeLayout>